# zpg-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/models/: triangle.h
res/shaders/: basic.glsl  basic_fragment.glsl  basic_vertex.glsl  dir_light.glsl  dir_light_fragment.glsl  flashlight.glsl  gradient.glsl  multiple_lights_fragment.glsl  phong_fragment.glsl  phong_vertex.glsl  point_light.glsl  skycube_fragment.glsl  skycube_vertex.glsl
src/: camera.cpp  camera.h  drawable_object.cpp  drawable_object.h  epch.h  gl_common.cpp  gl_common.h  i_bind.h  i_camera_subject.h  i_window_observer.h  index_buffer.cpp  main.cpp  model.cpp  model.h  model_rotate.cpp  model_rotate.h  model_scale.cpp  model_scale.h  model_transformation.cpp  model_transformation.h  model_translate.cpp  model_translate.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h  window.cpp  window.h
src/application/: main.cpp
src/engine/: application.cpp  application.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  directional_light.cpp  directional_light.h  drawable_object.cpp  drawable_object.h  engine.h  epch.h  flash_light.cpp  flash_light.h  gl_common.cpp  i_camera_observer.h  index_buffer.h  light.cpp  light.h  main.cpp  model.h  model_loader.cpp  model_loader.h  model_rotate.cpp  model_rotate.h  model_transformation.h  point_light.cpp  point_light.h  scene.cpp  scene.h  shader.cpp  shader_loader.cpp  shader_loader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  textures.cpp  textures.h  vertex_buffer.cpp  (+4 more)
src/engine/interface/: i_camera_observer.h  i_camera_subject.h  i_light_observer.h  i_light_subject.h  i_shader.h  i_window_observer.h  i_window_subject.h
